fix: flex-wrap

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 
   .main {
       display: flex;
+      flex-wrap: wrap;
       margin: 50px 0;
   }
 
